--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>Natamus</title>
 	<link rel="stylesheet" href="/assets/css/global.css">
 	<link rel="stylesheet" href="/assets/css/home.css">
-	<script async defer data-website-id="6d80b390-aa82-466a-8ac9-95e3193d53f3" src="https://panel.ntmsdata.com/hello.js"></script>
+	<!--<script async defer data-website-id="6d80b390-aa82-466a-8ac9-95e3193d53f3" src="https://panel.ntmsdata.com/hello.js"></script>-->
 </head>
 <body>
 	<div class="noselect">
